--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+    <string name="loading_error">Failed to load previous state</string>
 </resources>
